--- a/portfolio.html
+++ b/portfolio.html
@@ -87,8 +87,11 @@
           <!--Projects-->
           <ul class="project list">
             <li class="item">
+              <div class="project-top">
               <a href="#" class="link">
                 <img src="./images/project1.jpg" alt="Відкритий ноутбук" />
+                <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                вичерпні відомості про компанію чи приватну особу.</p></div>
                 <div class="content">
                   <h3 class="title">Технокряк</h3>
                   <p class="text">Веб-сайт</p>
@@ -96,11 +99,16 @@
               >
             </li>
             <li class="item">
+              <div class="project-top">
               <a href="#" class="link">
                 <img
                   src="./images/project2.jpg"
                   alt="Два баскетболіста стрибають"
                 />
+                <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
                 <div class="content">
                   <h3 class="title">Постер New Orlean vs Golden Star</h3>
                   <p class="text">Дизайн</p>
@@ -108,11 +116,16 @@
               </a>
             </li>
             <li class="item">
+              <div class="project-top">
               <a href="#" class="link">
                 <img
                   src="./images/project3.jpg"
                   alt="Логотип рибного ресторану"
                 />
+                <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
                 <div class="content">
                   <h3 class="title">Ресторан Seafood</h3>
                   <p class="text">Додаток</p>
@@ -120,11 +133,16 @@
               </a>
             </li>
             <li class="item">
+              <div class="project-top">
               <a href="#" class="link">
                 <img
                   src="./images/project4.jpg"
                   alt="Навушники закритого типу"
                 />
+                <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
                 <div class="content">
                   <h3 class="title">Проєкт Prime</h3>
                   <p class="text">Маркетинг</p>
@@ -132,8 +150,13 @@
               </a>
             </li>
             <li class="item">
+              <div class="project-top">
               <a href="#" class="link">
                 <img src="./images/project5.jpg" alt="Дві картонні коробки" />
+                <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
                 <div class="content">
                   <h3 class="title">Проєкт Boxes</h3>
                   <p class="text">Додаток</p>
@@ -141,11 +164,16 @@
               </a>
             </li>
             <li class="item">
+              <div class="project-top">
               <a href="#" class="link">
                 <img
                   src="./images/project6.jpg"
                   alt="Сайт зображений на моноблоці Apple iMac"
                 />
+                <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
                 <div class="content">
                   <h3 class="title">Inspiration has no Borders</h3>
                   <p class="text">Веб-сайт</p>
@@ -153,8 +181,13 @@
               </a>
             </li>
             <li class="item">
+              <div class="project-top">
               <a href="#" class="link">
                 <img src="./images/project7.jpg" alt="Розгорнутий журнал" />
+                <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
                 <div class="content">
                   <h3 class="title">Видання Limited Edition</h3>
                   <p class="text">Дизайн</p>
@@ -162,11 +195,16 @@
               </a>
             </li>
             <li class="item">
+              <div class="project-top">
               <a href="#" class="link">
                 <img
                   src="./images/project8.jpg"
                   alt="Бумажний ярлик з написом"
                 />
+                <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
                 <div class="content">
                   <h3 class="title">Проєкт LAB</h3>
                   <p class="text">Маркетинг</p>
@@ -174,11 +212,16 @@
               </a>
             </li>
             <li class="item">
+              <div class="project-top">
               <a href="#" class="link">
                 <img
                   src="./images/project9.jpg"
                   alt="Людина працює на ноутбуці"
                 />
+                <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
                 <div class="content">
                   <h3 class="title">Growing Business</h3>
                   <p class="text">Додаток</p>
