--- a/index.html
+++ b/index.html
@@ -113,22 +113,31 @@
           <h2 class="section-title">Чим ми займаємося</h2>
           <ul class="work-list list">
             <li class="item">
-              <img
-                src="./images/photo5.jpg"
-                alt="Людина працює за комп'ютером"
-              />
+              <div class="work-box">
+                <img
+                 src="./images/photo5.jpg"
+                 alt="Людина працює за комп'ютером"
+                />
+               <p class="work-text">Десктопні додатки</p>
+              </div>
             </li>
             <li class="item">
-              <img
-                src="./images/photo6.jpg"
-                alt="Людина на моніторі розглядає варіанти розмітки сайтів для мобільних пристроїв"
-              />
+              <div class="work-box">
+                <img
+                  src="./images/photo6.jpg"
+                  alt="Людина на моніторі розглядає варіанти розмітки сайтів для мобільних пристроїв"
+                />
+                <p class="work-text">Мобільні додатки</p>
+              </div>
             </li>
             <li class="item">
-              <img
-                src="./images/photo7.jpg"
-                alt="Людина розглядає на планшеті палітру кольорів"
-              />
+              <div class="work-box">
+                <img
+                  src="./images/photo7.jpg"
+                  alt="Людина розглядає на планшеті палітру кольорів"
+                />
+                <p class="work-text">Дизайнерські рішення</p>
+              </div>
             </li>
           </ul>
         </div>
