--- a/portfolio.html
+++ b/portfolio.html
@@ -87,27 +87,25 @@
           <!--Projects-->
           <ul class="project list">
             <li class="item">
-              <div class="project-top">
-              <a href="#" class="link">
-                <img src="./images/project1.jpg" alt="Відкритий ноутбук" />
-                <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
-                вичерпні відомості про компанію чи приватну особу.</p></div>
+              <a href="#" class="project-link link">
+                <div class="project-top">
+                  <img src="./images/project1.jpg" alt="Відкритий ноутбук" />
+                  <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
                 <div class="content">
                   <h3 class="title">Технокряк</h3>
                   <p class="text">Веб-сайт</p>
-                </div></a
-              >
+                </div>
+              </a>
             </li>
             <li class="item">
-              <div class="project-top">
-              <a href="#" class="link">
-                <img
-                  src="./images/project2.jpg"
-                  alt="Два баскетболіста стрибають"
-                />
-                <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
-                  відвідувачу отримати
-                  вичерпні відомості про компанію чи приватну особу.</p>
+              <a href="#" class="project-link link">
+                <div class="project-top">
+                  <img src="./images/project2.jpg" alt="Два баскетболіста стрибають" />
+                  <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                    дозволить відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
                 <div class="content">
                   <h3 class="title">Постер New Orlean vs Golden Star</h3>
@@ -116,15 +114,12 @@
               </a>
             </li>
             <li class="item">
-              <div class="project-top">
-              <a href="#" class="link">
-                <img
-                  src="./images/project3.jpg"
-                  alt="Логотип рибного ресторану"
-                />
-                <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
-                  відвідувачу отримати
-                  вичерпні відомості про компанію чи приватну особу.</p>
+              <a href="#" class="project-link link">
+                <div class="project-top">
+                  <img src="./images/project3.jpg" alt="Логотип рибного ресторану" />
+                  <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                    дозволить відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
                 <div class="content">
                   <h3 class="title">Ресторан Seafood</h3>
@@ -133,15 +128,12 @@
               </a>
             </li>
             <li class="item">
-              <div class="project-top">
-              <a href="#" class="link">
-                <img
-                  src="./images/project4.jpg"
-                  alt="Навушники закритого типу"
-                />
-                <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
-                  відвідувачу отримати
-                  вичерпні відомості про компанію чи приватну особу.</p>
+              <a href="#" class="project-link link">
+                <div class="project-top">
+                  <img src="./images/project4.jpg" alt="Навушники закритого типу" />
+                  <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                    дозволить відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
                 <div class="content">
                   <h3 class="title">Проєкт Prime</h3>
@@ -150,12 +142,12 @@
               </a>
             </li>
             <li class="item">
-              <div class="project-top">
-              <a href="#" class="link">
-                <img src="./images/project5.jpg" alt="Дві картонні коробки" />
-                <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
-                  відвідувачу отримати
-                  вичерпні відомості про компанію чи приватну особу.</p>
+              <a href="#" class="project-link link">
+                <div class="project-top">
+                  <img src="./images/project5.jpg" alt="Дві картонні коробки" />
+                  <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                    дозволить відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
                 <div class="content">
                   <h3 class="title">Проєкт Boxes</h3>
@@ -164,15 +156,12 @@
               </a>
             </li>
             <li class="item">
-              <div class="project-top">
-              <a href="#" class="link">
-                <img
-                  src="./images/project6.jpg"
-                  alt="Сайт зображений на моноблоці Apple iMac"
-                />
-                <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
-                  відвідувачу отримати
-                  вичерпні відомості про компанію чи приватну особу.</p>
+              <a href="#" class="project-link link">
+                <div class="project-top">
+                  <img src="./images/project6.jpg" alt="Сайт зображений на моноблоці Apple iMac" />
+                  <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                    дозволить відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
                 <div class="content">
                   <h3 class="title">Inspiration has no Borders</h3>
@@ -181,12 +170,12 @@
               </a>
             </li>
             <li class="item">
-              <div class="project-top">
-              <a href="#" class="link">
-                <img src="./images/project7.jpg" alt="Розгорнутий журнал" />
-                <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
-                  відвідувачу отримати
-                  вичерпні відомості про компанію чи приватну особу.</p>
+              <a href="#" class="project-link link">
+                <div class="project-top">
+                  <img src="./images/project7.jpg" alt="Розгорнутий журнал" />
+                  <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                    дозволить відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
                 <div class="content">
                   <h3 class="title">Видання Limited Edition</h3>
@@ -195,31 +184,25 @@
               </a>
             </li>
             <li class="item">
-              <div class="project-top">
-              <a href="#" class="link">
-                <img
-                  src="./images/project8.jpg"
-                  alt="Бумажний ярлик з написом"
-                />
-                <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
-                  відвідувачу отримати
-                  вичерпні відомості про компанію чи приватну особу.</p>
+              <a href="#" class="project-link link">
+                <div class="project-top">
+                  <img src="./images/project8.jpg" alt="Паперовий ярлик з написом" />
+                  <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                    дозволить відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
                 <div class="content">
-                  <h3 class="title">Проєкт LAB</h3>
+                  <h3 class="title">Проєкт</h3>
                   <p class="text">Маркетинг</p>
                 </div>
               </a>
             </li>
             <li class="item">
-              <div class="project-top">
-              <a href="#" class="link">
-                <img
-                  src="./images/project9.jpg"
-                  alt="Людина працює на ноутбуці"
-                />
-                <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
-                  відвідувачу отримати
+              <a href="#" class="project-link link">
+                <div class="project-top">
+                  <img src="./images/project9.jpg" alt="Людина працює на ноутбуці" />
+                  <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                  дозволить відвідувачу отримати
                   вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
                 <div class="content">
