--- a/portfolio.html
+++ b/portfolio.html
@@ -90,8 +90,7 @@
               <a href="#" class="project-link link">
                 <div class="project-top">
                   <img src="./images/project1.jpg" alt="Відкритий ноутбук" />
-                  <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
-                  вичерпні відомості про компанію чи приватну особу.</p>
+                  <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
                 <div class="content">
                   <h3 class="title">Технокряк</h3>
@@ -103,9 +102,7 @@
               <a href="#" class="project-link link">
                 <div class="project-top">
                   <img src="./images/project2.jpg" alt="Два баскетболіста стрибають" />
-                  <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
-                    дозволить відвідувачу отримати
-                    вичерпні відомості про компанію чи приватну особу.</p>
+                  <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
                 <div class="content">
                   <h3 class="title">Постер New Orlean vs Golden Star</h3>
@@ -117,9 +114,7 @@
               <a href="#" class="project-link link">
                 <div class="project-top">
                   <img src="./images/project3.jpg" alt="Логотип рибного ресторану" />
-                  <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
-                    дозволить відвідувачу отримати
-                    вичерпні відомості про компанію чи приватну особу.</p>
+                  <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
                 <div class="content">
                   <h3 class="title">Ресторан Seafood</h3>
@@ -131,9 +126,7 @@
               <a href="#" class="project-link link">
                 <div class="project-top">
                   <img src="./images/project4.jpg" alt="Навушники закритого типу" />
-                  <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
-                    дозволить відвідувачу отримати
-                    вичерпні відомості про компанію чи приватну особу.</p>
+                  <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
                 <div class="content">
                   <h3 class="title">Проєкт Prime</h3>
@@ -145,9 +138,7 @@
               <a href="#" class="project-link link">
                 <div class="project-top">
                   <img src="./images/project5.jpg" alt="Дві картонні коробки" />
-                  <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
-                    дозволить відвідувачу отримати
-                    вичерпні відомості про компанію чи приватну особу.</p>
+                  <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
                 <div class="content">
                   <h3 class="title">Проєкт Boxes</h3>
@@ -159,9 +150,7 @@
               <a href="#" class="project-link link">
                 <div class="project-top">
                   <img src="./images/project6.jpg" alt="Сайт зображений на моноблоці Apple iMac" />
-                  <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
-                    дозволить відвідувачу отримати
-                    вичерпні відомості про компанію чи приватну особу.</p>
+                  <p class="top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
                 <div class="content">
                   <h3 class="title">Inspiration has no Borders</h3>
